Replace references to pass-browser-chrome with pass-browser-firefox.

--- a/code/html/options.html
+++ b/code/html/options.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>pass-extension-chrome</title>
+    <title>pass-extension-firefox</title>
     <link rel="stylesheet" type="text/css" href="../css/libs/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="../css/options.css">
   </head>
@@ -14,7 +14,7 @@
           <fieldset class="form-group">
             <label for="key-name">Key name *</label>
             <small class="text-muted">Name of this key to identify it with.</small>
-            <input type="text" id="key-name" class="form-control" name="key-name" placeholder="pass-extension-chrome" required>
+            <input type="text" id="key-name" class="form-control" name="key-name" placeholder="pass-extension-firefox" required>
           </fieldset>
           <fieldset class="form-group">
             <label for="passphrase">Passphrase *</label>
