Skip html5 validation because of native browser-styling: https://bugzilla.mozilla.org/show_bug.cgi?id=1399046

--- a/code/html/options.html
+++ b/code/html/options.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <div class="row">
-        <form id="options-form">
+        <form id="options-form" novalidate>
           <fieldset class="form-group">
             <label for="key-name">Key name *</label>
             <small class="text-muted">Name of this key to identify it with.</small>
